test/good/generators/var02.px

func f(): Bool... def
    yield true

a: Bool... = f()
print [...a]
print [...a]
print {...a}
