test/bad/generators/generator05.px

func f(): Char... def
    yield 'c'

[...f() by 'a']
